--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "@testing-library/dom": "^7.30.1",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/user-event": "^13.0.16",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
@@ -36,15 +39,19 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "nock": "^13.0.11",
     "style-loader": "^2.0.0",
     "webpack": "^5.26.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
-    "popper.js": "^1.16.1"
+    "on-change": "^2.2.3",
+    "popper.js": "^1.16.1",
+    "yup": "^0.32.9"
   }
 }
