--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "verbose": true,
     "testURL": "http://localhost/"
   },
-  "main": "src/index.js",
+  "main": "src/app.js",
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
