--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/EdZev/frontend-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/EdZev/frontend-project-lvl3/actions)",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
