--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "i18next": "^20.1.0",
