--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "mini-css-extract-plugin": "^1.5.0",
     "nock": "^13.0.11",
     "style-loader": "^2.0.0",
     "webpack": "^5.26.2",
